# personal-arxiv-feed

./: LICENSE  README.md  pyproject.toml
src/arxiv_personal_feed/: arxiv_fetcher.py  config.py  llm_classifier.py  main.py  models.py
src/personal_arxiv_feed/: arxiv_fetcher.py  cache.py  config.py  llm_classifier.py  main.py  models.py
static/: style.css
templates/: index.html  interests.html
