[project]
name = "personal-arxiv-feed"
version = "0.1.0"
description = "A personal Arxiv feed server."
authors = [{ name = "opencode" }, { name = "Maarten Grachten" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "arxiv",
    "pydantic-ai",
    "sqlmodel",
    "apscheduler",
    "python-dotenv",
    "pytz",
]

[project.scripts]
personal-arxiv-feed = "personal_arxiv_feed.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90
